[project]
name = "caasa-helper"
version = "0.1.0"
description = "A simple python script to save caasa.it queries in a local database"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "lxml>=6.0.2",
    "pdoc>=16.0.0",
    "requests>=2.32.5",
    "typer>=0.24.1",
]
